Bug 74535 - VIEWING: Column contents appended in subsequent rows
Summary: VIEWING: Column contents appended in subsequent rows
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: Other Windows (All)
: high major
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:4.3.0 target:4.2.1
Keywords: regression
: 73992 74090 74442 74610 74639 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-02-04 19:54 UTC by belteshazzar.mouse+libre
Modified: 2015-01-22 22:06 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
This is the spreadsheet that contains the example listed in the long description. (17.43 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2014-02-04 19:54 UTC, belteshazzar.mouse+libre
Details
This is a clip of the observed current behavior. (38.25 KB, image/png)
2014-02-04 19:55 UTC, belteshazzar.mouse+libre
Details

Note You need to log in before you can comment on or make changes to this bug.
Description belteshazzar.mouse+libre 2014-02-04 19:54:03 UTC
Created attachment 93411 [details]
This is the spreadsheet that contains the example listed in the long description.

Problem description: 
While viewing an xlsx file, the value in the first column, first row is appended to the first column second row and so forth, recursively throughout the spreadsheet. This is only occurring in the first column. Additionally, the values in that row are links within the spreadsheet to cells on other worksheets.

The last Windows version I verified did not have this problem was 4.0. I also verified that the issue did not occur on a Linux LibreOffice version 4.1.4.2. for the same spreadsheet.

Steps to reproduce:
1. View the attached spreadsheet.

Current behavior: The value in column A, labeled "Key" is appended to the value in each successive row. For example the following cells contain these values:
A2 10:ABC10
A3 10:ABC1110:ABC10
A4 10:ABC1210:ABC1110:ABC10

Expected behavior: The first 8 or so characters are the actual key value. Following the example above, the first three rows of column A should contain:

A2 10:ABC10
A3 10:ABC11
A4 10:ABC12

Operating System: Windows 7
Version: 4.2.0.4 release
Comment 1 belteshazzar.mouse+libre 2014-02-04 19:55:40 UTC
Created attachment 93412 [details]
This is a clip of the observed current behavior.
Comment 2 belteshazzar.mouse+libre 2014-02-04 19:57:51 UTC
The section reading: "Additionally, the values in that row are links" should read "Additionally, the values in that *column* are links"
Comment 3 m_a_riosv 2014-02-04 23:06:36 UTC
Hi @belteshazzar.mouse+libre, thanks for reporting.

Reproducible with:
Win7x64Ultimate
Version: 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Version: 4.3.0.0.alpha0+ Build ID: bab7eebba127d603a9f8011fed290627e2a64423
         TinderBox: Win-x86@39, Branch:master, Time: 2014-01-31_00:56:43

Works in:
Version: 4.1.6.0.0+ Build ID: 2d0b2cb6b7ca48663d09118acfb01a1dd194a1e
Comment 4 m_a_riosv 2014-02-07 00:19:43 UTC
*** Bug 74610 has been marked as a duplicate of this bug. ***
Comment 5 m_a_riosv 2014-02-07 00:43:53 UTC
*** Bug 74639 has been marked as a duplicate of this bug. ***
Comment 6 Kohei Yoshida 2014-02-07 19:40:32 UTC
I'll take it.
Comment 7 Commit Notification 2014-02-07 19:42:09 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36e7fca5fa87fc72cdc9315438d9437fae9aa3da

fdo#74535: Write unit test for importing hyperlinks from xlsx.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-02-07 19:42:24 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=10da10ee6ba37f4861045d1f8db0022293433cec

fdo#74535: Don't forget clear the edit engine before re-using it.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Kohei Yoshida 2014-02-07 19:42:36 UTC
4.2 backport: https://gerrit.libreoffice.org/7936
Comment 10 Kohei Yoshida 2014-02-07 19:47:53 UTC
*** Bug 73992 has been marked as a duplicate of this bug. ***
Comment 11 Commit Notification 2014-02-07 20:13:01 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1f7c6c54eda9bfcd1e4ef9136ccdfec434efcd69&h=libreoffice-4-2

fdo#74535: Don't forget clear the edit engine before re-using it.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Kohei Yoshida 2014-02-07 20:14:00 UTC
Fixed in 4.2.
Comment 13 Todd 2014-02-11 02:41:47 UTC
Is the patch in today's daily (2-10-2014)?
Comment 14 m_a_riosv 2014-02-11 02:46:21 UTC
Seems it is.
Verified fixed.
Win7x64Ult.
Version: 4.2.1.0.0+ Build ID: 684a0308dcb847f816967202ba87f536b83dcb4e
TinderBox: Win-x86@42, Branch:libreoffice-4-2, Time: 2014-02-10_23:09:14
Comment 15 Kohei Yoshida 2014-02-19 15:38:15 UTC
*** Bug 74090 has been marked as a duplicate of this bug. ***
Comment 16 Kevin Suo 2014-03-17 08:32:30 UTC
*** Bug 74442 has been marked as a duplicate of this bug. ***