fdo#74535: Don't forget clear the edit engine before re-using it.

Else you'd get a very comical result.

Change-Id: Ie73145dee47a8583f2e9cdb7ddb4f2d66f361dc1